# pet-store-rs

./: .gitignore  Cargo.toml  Changelog.md
configs/qa/: config.toml
migrations/: 01_init.sql
src/: config.rs  main.rs  orders.rs  persistence.rs  pet.rs  user.rs
